--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ gradio = "^4.38.1"
 gfpgan = "^1.3.8"
 dlib-bin = "^19.24.2.post1"
 numpy = "1.23.4"
+opencv-python = "4.7.0.72"
 
 [tool.poetry.scripts]
 sadtalker = "sadtalker_video_lip_sync.inference:main"
