--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,17 +18,23 @@ kornia = "0.6.8"
 tqdm = "^4.66.4"
 yacs = "0.1.8"
 pyyaml = "^6.0.1"
-basicsr = "1.4.2"
 facexlib = "0.2.5"
 gradio = "^4.38.1"
 gfpgan = "^1.3.8"
 dlib-bin = "^19.24.2.post1"
 numpy = "1.23.4"
 opencv-python = "4.7.0.72"
+torch = "2.2.0"
+torchvision = "0.17.0"
+imageio = "2.19.3"
+basicsr = {git = "https://github.com/XPixelGroup/BasicSR.git", rev = "master"}
 
 [tool.poetry.scripts]
 sadtalker = "sadtalker_video_lip_sync.inference:main"
 
+
+[tool.poetry.group.dev.dependencies]
+ipython = "^8.26.0"
 
 [build-system]
 requires = ["poetry-core"]
